# lucebox-hub

./: .gitignore
dflash/: CMakeLists.txt  README.md  RESULTS.md
dflash/docs/: SPEC_PREFILL.md
dflash/scripts/: bench_he.py  bench_llm.py  run.py  server.py  server_tools.py
dflash/src/: f16_convert.hip.cu  flashprefill.cpp  flashprefill_q8.cpp  internal.h  qwen35_target_graph.cpp  qwen3_0p6b_drafter.h  qwen3_0p6b_graph.cpp  qwen3_drafter.cpp
dflash/test/: bench_score.cpp  test_dflash.cpp
docs/: BENCHMARKS.md  PROGRESS.md  SERVING.md
megakernel/: README.md  bench_pp_tg.py  final_bench.py  kernel.cu  model.py  prefill.cu  torch_bindings.cpp
pflash/: README.md
pflash/pflash/: dflash_client.py
pflash/tests/: bench_niah_cpp.py  niah_128k.jsonl  niah_32k.jsonl  niah_8k.jsonl  niah_8k_semantic.jsonl  niah_gen.py
scripts/: start_server.sh
